--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+reicast (0.1-ubuntu2) trusty; urgency=medium
+
+  * tests
+
+ -- Zen aka Chibiko <zenogears.aka@gmail.com>  Sat, 15 Aug 2015 22:00:54 +0300
+
 reicast (0.1-ubuntu1) trusty; urgency=medium
 
   * Initial release. (Closes: #XXXXXX)
